--- a/admin.html
+++ b/admin.html
@@ -7,7 +7,7 @@
     body {
       margin: 0;
       font-family: 'Montserrat', sans-serif;
-      background-color: #0271ff;
+      background-color: #022f60;
     }
 
     .topbar {
@@ -24,7 +24,7 @@
     }
 
     .topbar .nav-links a {
-      color: #0271ff;
+      color: #022f60;
       margin-left: 1rem;
       font-weight: bold;
       text-decoration: none;
@@ -53,7 +53,7 @@
 
     .card h2 {
       margin-top: 0;
-      color: #0271ff;
+      color: #022f60;
     }
 
     input, select, textarea, button {
@@ -75,7 +75,7 @@
     }
 
     button:hover {
-      background-color: #005cd4;
+      background-color: #025bd2;
     }
 
     table {
@@ -234,7 +234,6 @@
       saveData();
       renderTasks();
 
-      // Reset form
       document.getElementById("taskTitle").value = "";
       document.getElementById("assignedTo").value = "";
       document.getElementById("deadline").value = "";
