--- a/dashboard.html
+++ b/dashboard.html
@@ -7,7 +7,7 @@
     body {
       margin: 0;
       font-family: 'Montserrat', sans-serif;
-      background-color: #0271ff;
+      background-color: #022f60;
     }
 
     .topbar {
@@ -24,7 +24,7 @@
     }
 
     .topbar .nav-links a {
-      color: #0271ff;
+      color: #022f60;
       margin-left: 1rem;
       font-weight: bold;
       text-decoration: none;
@@ -77,7 +77,7 @@
     .card h2 {
       margin: 0;
       padding: 1rem 1.5rem;
-      background-color: #005cd4;
+      background-color: #025bd2;
       color: white;
       cursor: pointer;
       border-top-left-radius: 10px;
