--- a/profile.html
+++ b/profile.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Pusaq Dashboard</title>
+  <meta charset="UTF-8">
+  <title>Your Profile - Pusaq</title>
   <style>
     body {
-      margin: 0;
       font-family: 'Montserrat', sans-serif;
-      background-color: #0271ff;
+      background-color: #022f60;
+      margin: 0;
     }
 
     .topbar {
@@ -24,7 +24,7 @@
     }
 
     .topbar .nav-links a {
-      color: #0271ff;
+      color: #022f60;
       margin-left: 1rem;
       font-weight: bold;
       text-decoration: none;
@@ -36,105 +36,50 @@
       margin: 2rem 0 1rem;
     }
 
-    .summary-bar {
-      max-width: 600px;
-      margin: 0 auto 1.5rem;
-      background: white;
-      padding: 1rem;
-      border-radius: 10px;
-      text-align: center;
-      box-shadow: 0 6px 12px rgba(0,0,0,0.1);
-    }
-
-    .progress-outer {
-      width: 100%;
-      height: 16px;
-      background: #eee;
-      border-radius: 8px;
-      overflow: hidden;
-      margin-top: 0.5rem;
-    }
-
-    .progress-inner {
-      height: 100%;
-      background: #0271ff;
-      width: 0%;
-      transition: width 0.5s ease-in-out;
-    }
-
-    .accordion {
-      max-width: 1000px;
+    .profile-box {
+      max-width: 400px;
       margin: 0 auto;
-    }
-
-    .card {
       background: white;
-      border-radius: 10px;
-      margin-bottom: 1.5rem;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-    }
-
-    .card h2 {
-      margin: 0;
-      padding: 1rem 1.5rem;
-      background-color: #005cd4;
-      color: white;
-      cursor: pointer;
-      border-top-left-radius: 10px;
-      border-top-right-radius: 10px;
-    }
-
-    .panel {
-      display: none;
-      padding: 1.5rem;
-    }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 1rem;
-    }
-
-    th, td {
-      padding: 0.75rem;
-      border: 1px solid #ddd;
+      padding: 2rem;
+      border-radius: 12px;
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
       text-align: center;
     }
 
-    th {
-      background-color: #eee;
+    .profile-box img {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-bottom: 1rem;
+      border: 3px solid #0271ff;
     }
 
-    select, input[type="number"], textarea {
+    input[type="file"],
+    input[type="text"],
+    input[readonly],
+    button {
       width: 100%;
-      padding: 6px;
+      padding: 10px;
+      margin: 10px 0;
+      border-radius: 6px;
       font-size: 1rem;
-      border-radius: 4px;
+    }
+
+    input, input[readonly] {
       border: 1px solid #ccc;
     }
 
-    .progress-bar {
-      height: 12px;
-      background: #ddd;
-      border-radius: 5px;
-      overflow: hidden;
-    }
-
-    .progress-fill {
-      height: 100%;
+    button {
       background-color: #0271ff;
-      width: 0%;
-      transition: width 0.4s;
+      color: white;
+      border: none;
+      cursor: pointer;
+      font-weight: bold;
     }
 
-    .status-Not\ Started { color: gray; }
-    .status-In\ Progress { color: #007bff; }
-    .status-Blocked { color: red; }
-    .status-Done { color: green; }
-
-    .completed {
-      background-color: #e6ffe6;
-      text-decoration: line-through;
+    button:hover {
+      background-color: #025bd2;
     }
   </style>
 </head>
@@ -143,21 +88,22 @@
   <div class="topbar">
     <img src="https://via.placeholder.com/150x40?text=Pusaq+Logo" alt="Pusaq Logo" />
     <div class="nav-links">
+      <a href="dashboard.html">📋 Dashboard</a>
       <a href="calendar-grid.html">📅 Calendar</a>
-      <a href="profile.html" id="profileBtn">👤 Profile</a>
     </div>
   </div>
 
-  <h1>🧠 Your Tasks by Project</h1>
-
-  <div class="summary-bar">
-    <strong id="taskSummaryText">Loading...</strong>
-    <div class="progress-outer">
-      <div class="progress-inner" id="summaryBar"></div>
-    </div>
+  <h1>👤 Your Profile</h1>
+  <div class="profile-box">
+    <img id="avatar" src="https://via.placeholder.com/100" alt="Profile" />
+    <input type="file" id="imageUpload" accept="image/*" />
+    <input type="text" id="displayName" placeholder="Your name" />
+    <input type="text" id="role" readonly />
+    <input type="text" id="password" readonly />
+    <button onclick="saveProfile()">💾 Save Changes</button>
+    <button onclick="goToDashboard()">📋 Go to Dashboard</button>
+    <button onclick="logout()">🚪 Logout</button>
   </div>
-
-  <div class="accordion" id="taskContainer"></div>
 
   <script>
     const currentUser = sessionStorage.getItem("currentUser");
@@ -166,137 +112,44 @@
       window.location.href = "index.html";
     }
 
-    document.getElementById("profileBtn").innerText = `👤 ${currentUser}`;
+    let profile = JSON.parse(localStorage.getItem(currentUser));
+    const avatar = document.getElementById("avatar");
+    const displayName = document.getElementById("displayName");
+    const role = document.getElementById("role");
+    const password = document.getElementById("password");
+    const imageUpload = document.getElementById("imageUpload");
 
-    const tasks = JSON.parse(localStorage.getItem("tasks")) || [];
-    const projects = JSON.parse(localStorage.getItem("projects")) || [];
-    const userTasks = tasks.filter(t => t.assignedTo === currentUser);
+    avatar.src = profile.image || "https://via.placeholder.com/100";
+    displayName.value = profile.name || currentUser;
+    role.value = profile.role;
+    password.value = profile.password;
 
-    const grouped = {};
-    userTasks.forEach(task => {
-      if (!grouped[task.project]) grouped[task.project] = [];
-      grouped[task.project].push(task);
-    });
-
-    function renderSummary() {
-      const total = userTasks.length;
-      const completed = userTasks.filter(t => t.status === "Done" || t.progress == 100).length;
-      const percent = total ? Math.round((completed / total) * 100) : 0;
-      document.getElementById("taskSummaryText").innerText =
-        `You’ve completed ${completed} of ${total} tasks (${percent}%)`;
-      document.getElementById("summaryBar").style.width = percent + "%";
-    }
-
-    const container = document.getElementById("taskContainer");
-    container.innerHTML = "";
-
-    Object.keys(grouped).forEach(project => {
-      const card = document.createElement("div");
-      card.className = "card";
-
-      const header = document.createElement("h2");
-      header.textContent = project;
-      header.onclick = () => {
-        const panel = header.nextElementSibling;
-        panel.style.display = panel.style.display === "block" ? "none" : "block";
+    imageUpload.addEventListener("change", function () {
+      const file = this.files[0];
+      if (!file) return;
+      const reader = new FileReader();
+      reader.onload = function (e) {
+        avatar.src = e.target.result;
+        profile.image = e.target.result;
       };
-
-      const panel = document.createElement("div");
-      panel.className = "panel";
-
-      const table = document.createElement("table");
-      table.innerHTML = `
-        <thead>
-          <tr>
-            <th>✓</th>
-            <th>Task</th>
-            <th>Deadline</th>
-            <th>Status</th>
-            <th>Progress</th>
-            <th>Notes</th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-      `;
-
-      grouped[project].forEach(task => {
-        const row = document.createElement("tr");
-        if (task.status === "Done" || task.progress == 100) {
-          row.classList.add("completed");
-        }
-
-        const statusClass = `status-${task.status.replace(" ", "\\ ")}`;
-        row.innerHTML = `
-          <td><input type="checkbox" ${task.status === 'Done' ? 'checked' : ''} 
-               onchange="toggleComplete('${task.title}', this.checked)"></td>
-          <td>${task.title}</td>
-          <td>${task.deadline}</td>
-          <td>
-            <select class="${statusClass}" onchange="updateStatus('${task.title}', this.value)">
-              <option ${task.status === 'Not Started' ? 'selected' : ''}>Not Started</option>
-              <option ${task.status === 'In Progress' ? 'selected' : ''}>In Progress</option>
-              <option ${task.status === 'Blocked' ? 'selected' : ''}>Blocked</option>
-              <option ${task.status === 'Done' ? 'selected' : ''}>Done</option>
-            </select>
-          </td>
-          <td>
-            <input type="number" value="${task.progress}" min="0" max="100"
-              onchange="updateProgress('${task.title}', this.value)" />%
-            <div class="progress-bar">
-              <div class="progress-fill" style="width: ${task.progress}%"></div>
-            </div>
-          </td>
-          <td>
-            <textarea rows="2" onchange="updateNote('${task.title}', this.value)">${task.note || ''}</textarea>
-          </td>
-        `;
-        table.querySelector("tbody").appendChild(row);
-      });
-
-      panel.appendChild(table);
-      card.appendChild(header);
-      card.appendChild(panel);
-      container.appendChild(card);
+      reader.readAsDataURL(file);
     });
 
-    function updateStatus(title, status) {
-      const task = tasks.find(t => t.title === title && t.assignedTo === currentUser);
-      if (task) {
-        task.status = status;
-        if (status === "Done") task.progress = 100;
-        localStorage.setItem("tasks", JSON.stringify(tasks));
-        location.reload();
-      }
+    function saveProfile() {
+      profile.name = displayName.value;
+      localStorage.setItem(currentUser, JSON.stringify(profile));
+      alert("✅ Profile updated!");
+      location.reload();
     }
 
-    function toggleComplete(title, isDone) {
-      const task = tasks.find(t => t.title === title && t.assignedTo === currentUser);
-      if (task) {
-        task.status = isDone ? "Done" : "In Progress";
-        task.progress = isDone ? 100 : 50;
-        localStorage.setItem("tasks", JSON.stringify(tasks));
-        location.reload();
-      }
+    function goToDashboard() {
+      window.location.href = profile.role === "admin" ? "admin.html" : "dashboard.html";
     }
 
-    function updateProgress(title, value) {
-      const task = tasks.find(t => t.title === title && t.assignedTo === currentUser);
-      if (task) {
-        task.progress = parseInt(value);
-        if (task.progress >= 100) task.status = "Done";
-        localStorage.setItem("tasks", JSON.stringify(tasks));
-      }
+    function logout() {
+      sessionStorage.clear();
+      window.location.href = "index.html";
     }
-
-    function updateNote(title, value) {
-      const task = tasks.find(t => t.title === title && t.assignedTo === currentUser);
-      if (task) {
-        task.note = value;
-        localStorage.setItem("tasks", JSON.stringify(tasks));
-      }
-    }
-
-    renderSummary();
   </script>
 </body>
 </html>
