--- a/admin.html
+++ b/admin.html
@@ -117,7 +117,7 @@
 <body>
 
   <div class="topbar">
-    <img src="https://via.placeholder.com/150x40?text=Pusaq+Logo" alt="Pusaq Logo" />
+   <img src="assets/pusaq-logo.jpeg" alt="Pusaq Logo" style="height: 40px;" />
     <div class="nav-links">
       <a href="admin-calendar-grid.html">📅 Grid View</a>
       <a href="admin-calendar.html">🗓 List View</a>
