--- a/dashboard.html
+++ b/dashboard.html
@@ -141,7 +141,7 @@
 <body>
 
   <div class="topbar">
-    <img src="https://via.placeholder.com/150x40?text=Pusaq+Logo" alt="Pusaq Logo" />
+<img src="assets/pusaq-logo.jpeg" alt="Pusaq Logo" style="height: 40px;" />
     <div class="nav-links">
       <a href="calendar-grid.html">📅 Calendar</a>
       <a href="profile.html" id="profileBtn">👤 Profile</a>
