--- a/profile.html
+++ b/profile.html
@@ -86,7 +86,7 @@
 <body>
 
   <div class="topbar">
-    <img src="https://via.placeholder.com/150x40?text=Pusaq+Logo" alt="Pusaq Logo" />
+<img src="assets/pusaq-logo.jpeg" alt="Pusaq Logo" style="height: 40px;" />
     <div class="nav-links">
       <a href="dashboard.html">📋 Dashboard</a>
       <a href="calendar-grid.html">📅 Calendar</a>
